04-mosquitto_broker.yaml
#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: broker
  
  template:
    metadata:
      labels:
        app: broker
    
    spec:
      nodeSelector:
          kubernetes.io/hostname: andreas
          node-role.kubernetes.io/control-plane: "true"
          node-role.kubernetes.io/master: "true"
      containers:
      - name: broker
  
        image: p4lik4ri/mosquitto:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 1883
        - containerPort: 9001
---
#Service
apiVersion: v1
kind: Service
metadata:
  name: broker-service
spec:
  selector:
    app: broker
  ports:
    - name: "1883"
      port: 1883
      targetPort: 1883
    - name: "9001"
      port: 9001
      targetPort: 9001
