traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
spec:
  rules: 
   - host: influxdb.test
     http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: influxdb-service
            port:
              number: 8086
   - host: nginx.test
     http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port:
              number: 80
